--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     align-items: center;
 
 }
-.btn{
+.button{
     background-color: aqua;
     border-radius: 20px;
     padding: 0 20px;
@@ -41,10 +41,10 @@
     margin-top: 20px;
 }
 
-.cls{
+.class{
     font-size: 25px;
 }
-.text-container{
+.text-container-div{
     padding: 15px;
 }
 .title{
